# dolphin-retro-thumbnail

./: CMakeLists.txt  README.md
gcn/: CMakeLists.txt  gcnthumbnail.cpp  gcnthumbnail.desktop  gcnthumbnail.h  gcnthumbnail.json
nds/: CMakeLists.txt  nds_banner.h  ndsthumbnail.cpp  ndsthumbnail.desktop  ndsthumbnail.h  ndsthumbnail.json
